force-app/main/default/objects/Time_Builder_Summary_Metric__c/fields/Event_Retention_Length__c.field-meta.xml
<CustomField>
    <fullName>Event_Retention_Length__c</fullName>
    <label>Event Retention Length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>45 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>