force-app/main/default/objects/Time_Builder_Summary_Metric__c/fields/SQL_Server_Reindex_Date__c.field-meta.xml
<CustomField>
    <fullName>SQL_Server_Reindex_Date__c</fullName>
    <label>SQL Server Reindex Date</label>
    <type>Date</type>
</CustomField>